# cpp-template

./: .clang-format  .clang-tidy  .gitattributes  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yaml
include/: convertunit.hpp
src/: main.cpp
test/: convertunit_test.cpp
